# python-dataframe-skim

./: .gitignore  README.md  pyproject.toml
.vim/: coc-settings.json
pandas_utils/: skim.py  skimer.py
po/: helpers.py  skim.py
skim/: playground.ipynb  skim.py
skim/skim_df_meta/: metadata.py
skimpy/: helpers.py  skim.py
src/skim/: playground.ipynb  skim.py  test_skim.py
tests/: conftest.py  test_helpers.py  test_skim.py
tests/data/: date_example.csv
