[tool.poetry]
name = "skim"
version = "0.1.0"
description = ""
authors = ["fbraza <fbraza@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8.7"
pandas = "^1.2.3"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
flake8 = "^3.9.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
