[tool.poetry]
name = "skim"
version = "0.1.0"
description = ""
authors = ["fbraza <fbraza@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8.7"
pre-commit = "^2.11.1"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
flake8 = "^3.9.0"
jupyter = "^1.0.0"
pandas = "^1.2.3"
numpy = "^1.20.2"
pytest = "^6.2.2"
commitizen = "^2.16.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
